--- a/front/package.json
+++ b/front/package.json
@@ -9,11 +9,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
     "axios": "^0.21.0",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "redux-persist": "^6.0.0",
+    "redux-persist": "^6.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
