--- a/front/package.json
+++ b/front/package.json
@@ -8,10 +8,14 @@
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.9.4",
     "axios": "^0.21.0",
+    "fast-deep-equal": "^3.1.3",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-i18next": "^9.0.10",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
