--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.5.0",
     "antd": "^4.9.4",
     "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
     "fast-deep-equal": "^3.1.3",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
