--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-audio-player": "^0.14.0",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-i18next": "^9.0.10",
