--- a/front/package.json
+++ b/front/package.json
@@ -12,15 +12,18 @@
     "fast-deep-equal": "^3.1.3",
     "i18next": "^19.8.4",
     "i18next-browser-languagedetector": "^6.0.1",
+    "multiselect-react-dropdown": "^1.6.3",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-i18next": "^9.0.10",
     "react-icons": "^4.1.0",
+    "react-multiselect-checkboxes": "^0.1.1",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^3.1.1",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "web-vitals": "^0.2.4"
